--- a/CaminhoCerto/package.json
+++ b/CaminhoCerto/package.json
@@ -8,7 +8,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~52.0.43",
+    "expo": "~52.0.46",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.9",
@@ -20,7 +20,9 @@
     "@react-navigation/native": "*",
     "react-native-gesture-handler": "~2.20.2",
     "@react-navigation/native-stack": "*",
-    "react-native-safe-area-context": "4.12.0"
+    "react-native-safe-area-context": "4.12.0",
+    "expo-image-picker": "~16.0.6",
+    "prop-types": "*"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
